# absolute-right

./: Cargo.toml  README.md  package.json
.github/workflows/: deploy-web.yml  publish-npm.yml
data/: profanity_lexicon.txt
docs/: bug-fixed-leaderboard-report-details-d1.md  npmjs-publish-sop.md  release-sop.md
npm/main/: package.json
scripts/npm/: stage-binary.mjs
src/: fuck_detector.rs  main.rs  report.rs
src/agent_adapter/: claude.rs  codex.rs  cursor.rs  mod.rs  opencode.rs
web/: package.json  wrangler.jsonc
web/src/components/: LeaderboardTable.astro  Podium.astro  ReportScreen.astro  SiteHeader.astro
web/src/lib/: auth.ts  i18n.ts  report.ts  share.ts
web/src/pages/: index.astro
web/src/pages/api/auth/github/: callback.ts  login.ts
web/src/pages/cards/: [slug].astro
web/src/pages/share/: [githubId].astro
web/src/pages/u/: [login].astro
