[package]
name = "absolute-right"
version = "0.1.19"
edition = "2024"
license = "WTFPL"
description = "对了么"
readme = "README.md"

[dependencies]
aho-corasick = "1.1.4"
futures = "0.3.31"
indicatif = "0.17.11"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["parsing"] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.23.0"
